# Zome

./: .gitignore  pyproject.toml
models/: attachment.py  base_class.py  draft.py  nlp_processor.py  note.py  source_note.py
src/garden/domain_models/: __init__.py  attachment.py  base_class.py  connection_manager.py  draft.py  nlp_processor.py  note.py  source_note.py  tag.py  theme.py
src/garden/flaskr/: __init__.py
src/garden/models/: attachment.py  base_class.py  connection.py  connection_manager.py  nlp_processor.py  note.py  note_model.py  tag.py  theme.py
src/instance/: app.sqlite
tests/: test_attachment.py  test_base_class.py  test_draft.py  test_flask_functional.py  test_nlpprocessor.py  test_note.py  test_note_crud_functional.py  test_source_note.py  test_tag.py
