[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "garden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gensim>=4.3.3",
    "pytest>=8.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/garden"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "black>=25.1.0",
    "mypy>=1.16.1",
]
